--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: ideathreading
+application: similarinterest
 version: 1
 runtime: python27
 api_version: 1
@@ -12,6 +12,8 @@ inbound_services:
 
 libraries:
 - name: django
+  version: latest
+- name: setuptools
   version: latest
 
 handlers:
